# DuckDuckGoose-Python

./: .env.development  README.md  pyproject.toml
src/: __init__.py  app.py
src/forms/: honk_form.py  login_form.py  registration_form.py
src/helpers/: flask_login_extensions.py
src/models/: follower_pair.py  honk.py  user.py
src/static/css/: bootstrap-icons.css
src/templates/: error.html  honk.html  honks.html  login.html  register.html  user.html  users.html  welcome.html
src/templates/layout/: base.html  navbar.html
