[tool.poetry]
name = "exercise-template"
version = "0.1.0"
description = ""
authors = ["Zachary Freed <zachary.freed@softwire.com>"]
readme = "README.md"
packages = [
  {include = "src"}
]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
Flask-Login = "^0.6.2"
Flask-WTF = "^1.0.1"
Flask-Bcrypt = "^1.0.1"
flask-sqlalchemy = "^3.0.2"
SQLAlchemy = "^1.4.46"
python-dotenv = "^0.21.0"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"
importlib-metadata = "^6.0.0"
typing-extensions = "^4.4.0"

[tool.poetry.scripts]
start = "src:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
